# oraenv

./: .gitignore  Makefile.am  README.md  build.sh  configure.ac  oraenv.spec
etc/: Makefile.am
etc/profile.d/: setoraenv.sh
share/: Makefile.am
share/example/: oracle.env
share/man/: Makefile.am
share/man/man1/: Makefile.am  oratab.1m  setoraenv.1
